--- a/ScrollTumbnails/ScrollTumbnails.csproj
+++ b/ScrollTumbnails/ScrollTumbnails.csproj
@@ -149,6 +149,9 @@
     <Content Include="Content\Img\IMG_6931.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\JS\MyScript.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
